--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,7 @@
   <% form_tag '/', :method => 'post', :class => 'form-search' do %>
     <%= flash_tag(:notice) %>
     <div class="input-append">
-      <%= text_field_tag 'text', :class => 'input-block-level search-query' %>
+      <%= text_field_tag 'text', :id => 'search', :class => 'input-block-level search-query' %>
       <%= submit_tag "Suggest", :class => 'btn' %>
     </div>
   <% end %>
