--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,6 +2,21 @@
   <h1>What should Nat do next?</h1>
   <p>Everyone's favorite gameshow!</p>
 
+  <h2>About</h2>
+  <p><a href="http://natwelch.com">Nat</a> has a &#8220;problem&#8221;. He doesn&#8217;t know what he wants in life. Because of that, he&#8217;s having trouble figuring out where he should direct his energy and time.</p>
+
+  <p>So <a href="http://natwelch.com">Nat</a> is reaching out to the internet for ideas. Some basic facts about Nat to get you thinking:</p>
+
+  <ul>
+    <li>Nat is a 25 year old male living in San Francisco, California.</li>
+    <li>Nat is a software developer by trade with five years of experience build web sites.</li>
+    <li>Nat likes consuming art (video games, movies, books, fine art, music, etc) and loves writing code (he views coding closer to writing than math, if that makes sense).</li>
+    <li>Nat has always lived in Northern California, and is ready for a climate change.</li>
+  </ul>
+
+  <p>So what do you think Nat should do with his life? Please post general ideas and discuss!</p>
+
+
   <% form_tag '/', :method => 'post', :class => 'form-search' do %>
     <%= flash_tag(:notice) %>
     <div class="input-append" id="search">
