--- a/app/css/application.scss
+++ b/app/css/application.scss
@@ -2,6 +2,19 @@ body {
   margin: 10px;
 }
 
-#search {
-  width: 90%;
+.media-text {
+  min-height: 40px;
+}
+
+.row {
+  margin-top: 5px;
+}
+
+#submission-btn {
+  width: 10%;
+}
+
+#submission-text {
+  width: 88%;
+  margin-right: 1%;
 }
