--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,5 +1,15 @@
 body {
   margin: 10px; }
 
-#search {
-  width: 90%; }
+.media-text {
+  min-height: 40px; }
+
+.row {
+  margin-top: 5px; }
+
+#submission-btn {
+  width: 10%; }
+
+#submission-text {
+  width: 88%;
+  margin-right: 1%; }
