--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -36,9 +36,16 @@
 
 <div class="row">
   <div class="span12">
-    <% form_tag '/', :method => 'post', :class => 'form-search' do %>
-      <%= text_field_tag 'text', :class => 'input-block-level', :id => 'submission-text' %>
-      <%= submit_tag "Suggest", :class => 'btn', :id => 'submission-btn' %>
+    <% if @logged_in %>
+      <% form_tag '/', :method => 'post', :class => 'form-search' do %>
+        <%= text_field_tag 'text', :class => 'input-block-level', :id => 'submission-text' %>
+        <%= submit_tag "Suggest", :class => 'btn', :id => 'submission-btn' %>
+      <% end %>
+    <% else %>
+      <div class="span4 centering">
+        <p>To post comments or submit suggestions...</p>
+        <p><a href="/login" class="btn btn-large btn-primary">Login!</a></p>
+      </div>
     <% end %>
   </div>
 </div>
